Fix len_arg_index for array arguments

Don't set len_arg_index for arrays without the length annotation given.
This fixes methods like Clutter.Texture.set_from_rgb_data() and
Clutter.Image.set_data()

Skip the test case in the cherrypick, as gobject-introspection do not yet ship
the test API in GNOME 3.4.

https://bugzilla.gnome.org/show_bug.cgi?id=674271

Signed-off-by: Martin Pitt <martinpitt@gnome.org>